Fix for the misaligned squared in the guides introduction.

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -306,7 +306,7 @@ div.js-fiddle-link {
     }
 
     h3 {
-      margin-top: 10px;
+      margin-top: 10px!important;
       padding-top: 0!important;
       font-size: 16px;
     }
